loadtest: scheduler-driven cadence so mock handlers stay on VTs (JCLAW-201)
Two refinements over the previous platform-thread workaround:

1. Handlers go back on virtual threads — matching the production
   agent-stream path end-to-end. Any future codebase-side regression that
   affects VT scheduling will now surface in mock loadtests instead of
   being hidden behind a platform-thread mock that bypassed the VT path
   entirely. Production validity > mock isolation here: we want the mock
   to expose, not mask, regressions in our own scheduling code.

2. Cadence comes from a shared 2-thread ScheduledExecutorService instead
   of Thread.sleep loops on the VT. Each chunk write is scheduled at an
   absolute deadline; the handler VT awaits a CompletableFuture whose
   get() parks untimed (LockSupport.park, NOT parkNanos) — that's outside
   the FJP timer-queue path JDK-8373224 affects. Net: zero Thread.sleep
   on VTs, no thundering herd, no work-queue starvation.

c=50 numbers, all fresh restarts:
  original sync mock:      wall 75 130 ms  tok/s 1.7   max_gap p50 4 999 ms
  jitter-only fix:         wall 70 385 ms  tok/s 12    max_gap p50 4 675 ms
  platform-thread mock:    wall    644 ms  tok/s 225   max_gap p50    11 ms
  scheduler + VTs (this):  wall    542 ms  tok/s 271   max_gap p50     8 ms

Wall improved further (~16% over platform-thread); tok/s up another
~20%; min_gap dropped from 3 ms (Thread.sleep precision) to 1 ms
(scheduler precision). Most importantly, scaling is now flat from c=2
(496 ms wall) to c=50 (542 ms) — that's the production-flow signature.

Once JDK-8373224 ships upstream and we upgrade, this design is already
correct — the workaround is in our code architecture (no Thread.sleep on
VTs) rather than in our executor choice. Nothing to revert.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>